[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

authors = ["Tarcísio Giroldo <tsgiroldo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features =["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.6.16"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = { version = "0.9.0" }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"